--- a/app/src/main/res/layout/snippet_individual_files.xml
+++ b/app/src/main/res/layout/snippet_individual_files.xml
@@ -3,13 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tool="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/file_image"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/grid_image_height"
-        />
+        android:layout_height="@dimen/grid_image_height">
+
+        <ImageView
+            android:id="@+id/file_selected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
+            tool:src='@drawable/ic_check_circle_black_24dp'
+            />
+
+
+        <ImageView
+            android:id="@+id/file_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tool:src='@drawable/ic_insert_drive_file_black_24dp'
+            android:layout_gravity="center"
+            />
+
+    </FrameLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:text="@string/grid_title"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/secondaryTextColor"
             android:textAlignment="center"
 
             android:maxLines="2"/>
@@ -34,7 +54,7 @@
             android:text="@string/grid_description"
             android:textAlignment="center"
             android:textSize="12sp"
-            android:textColor="@color/textColorLight"/>
+            android:textColor="@color/secondaryTextColor"/>
 
     </LinearLayout>
 
