--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="filesGridBackgroundColor">#FFFFFF</color>
-    <color name="textColorLight">#bdbdbd</color>
+  <color name="colorPrimary">#03a9f4</color>
+  <color name="primaryLightColor">#67daff</color>
+  <color name="colorPrimaryDark">#007ac1</color>
+  <color name="colorAccent">#c62828</color>
+  <color name="secondaryColor">#c62828</color>
+  <color name="secondaryLightColor">#ff5f52</color>
+  <color name="secondaryDarkColor">#8e0000</color>
+  <color name="primaryTextColor">#ffebee</color>
+  <color name="secondaryTextColor">#212121</color>
+  <color name="colorWhite">#ffffff</color>
 </resources>
