--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -31,6 +31,7 @@
             android:layout_gravity="top|center"
             app:lottie_rawRes="@raw/music"
             app:lottie_loop="true"
+            android:id="@+id/music"
             app:lottie_autoPlay="true"
             />
 
